--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -28,9 +28,10 @@
     "- 3.7: Sequential Model\n",
     "\n",
     "### Chapter 4: Testing Models and Conclusion\n",
-    "- 4.1: Testing Undersampling Model\n",
-    "- 4.2: Testing SMOTE Model\n",
-    "- 4.3: Conclusion\n",
+    "- 4.1: Testing Normal Model\n",
+    "- 4.2: Testing Undersampling Model\n",
+    "- 4.3: Testing SMOTE Model\n",
+    "- 4.4: Conclusion\n",
     "\n",
     "# Chapter 1: Exploratory Data Analysis\n",
     "\n",
