--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -31,7 +31,8 @@
     "- 4.1: Testing Normal Model\n",
     "- 4.2: Testing Undersampling Model\n",
     "- 4.3: Testing SMOTE Model\n",
-    "- 4.4: Conclusion\n",
+    "- 4.4: Extra\n",
+    "- 4.5: Conclusion\n",
     "\n",
     "# Chapter 1: Exploratory Data Analysis\n",
     "\n",
@@ -3178,7 +3179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.4: Conclusion\n",
+    "### 4.5: Conclusion\n",
     "The normal model proved to be the most successful in detecting fraudulent transactions in this extremely unbalanced dataset. With a recall rate of 82%, identifying the majority of fraudulent transactions. Although the precision of 77% indicates the presence of false alarms, it is noteworthy that the normal model is achieving promising results, considering the challenge posed by the data imbalance. \n",
     "\n",
     "These results underscore the effectiveness of the Gradient Boosting algorithm in handling imbalanced datasets and highlight its potential in early detection and prevention of fraudulent activities in financial transactions."
