--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -28,11 +28,8 @@
     "- 3.5: Sequential Model\n",
     "\n",
     "### Chapter 4: Testing Models and Conclusion\n",
-    "- 4.1: Testing Normal Model\n",
-    "- 4.2: Testing Undersampling Model\n",
-    "- 4.3: Testing SMOTE Model\n",
-    "- 4.4: Extra\n",
-    "- 4.5: Conclusion\n",
+    "- 4.1: Testing Models\n",
+    "- 4.2: Extra\n",
     "\n",
     "# Chapter 1: Exploratory Data Analysis\n",
     "\n",
